2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (music_db_count): Take additional parameter
	constraint.
	* src/musicdb.c (struct _MusicDB): Remove field count.
	(music_db_init): Don't initialize DB->COUNT.
	(music_db_count): Take additional parameter constraint.  If not
	NULL or the empty string, add to the SQL query.  Don't save result
	in DB->COUNT.
	(music_db_add): Don't update DB->COUNT.
	(music_db_remove): Likewise.
	(music_db_clear): Likewise.
	(music_db_for_each): If CONSTRAINT is the empty string, treat it
	as if it were NULL.
	* src/playlist.h (play_list_constrain): New declaration.
	* src/playlist.c (struct _PlayList): Add field constraint.
	(play_list_dispose): Free PL->CONSTRAINT.
	(do_refresh): Pass PL->CONSTRAINT to music_db_count and
	music_db_for_each.
	(play_list_constrain): New function.
	* src/starling.c (search_text_changed): New function.
	(starling_run): Add a search box.  Connect it to
	search_text_changed.

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Add field notebook.
	(jump_to_current): New function.
	(starling_run): Put the title and "jump to current" button in the
	main box, not in the player tab.  Connect the jump_to button's
	clicked event to jump_to_current.  Save the notebook in
	ST->NOTEBOOK.

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (music_db_for_each): Add parameter constraint.
	Update users.
	* src/musicdb.c (music_db_for_each): Add parameter constraint.  If
	not NULL, use it when constructing the SQL statement.
	* src/starling.c (queue_album_cb): Don't match in the callback
	function, use music_db_for_each's constraint parameter.
	(queue_artist_cb): Likewise.

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (struct _MusicDBClass): Add fields
	added_to_queue_signal_id and removed_from_queue_signal_id.
	* src/musicdb.c (music_db_class_init): Register signals
	"added-to-queue" and "removed-from-queue".